Potential CSS flicker fix - Mobile frontpage text

--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -174,7 +174,7 @@
         content: '';
         min-height: 0;
         flex-grow: 1;
-        max-height: 15%;
+        max-height: 10%;
         display: block;
       }
     }
